--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -25,7 +25,7 @@ body {font-size:16px;}
     <h3 class="w3-padding-64"><center><b>Usuario</b></center></h3>
   </div>
   <div class="w3-bar-block">
-    <a href="#cursos" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Cursos</a>
+    <a href="/cursos" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Cursos</a>
     <a href="#evaluadores" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Evaluadores</a>
       <a href="#rubricas" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Rúbricas</a>
     <a href="#evaluaciones" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Evaluaciones</a>
