--- a/blog/templates/blog/cursos.html
+++ b/blog/templates/blog/cursos.html
@@ -29,7 +29,7 @@
   <i class="fas fa-plus" style="font-size:100px;text-align: center; padding:50px"></i>
   </button>
 </div>
-    <div id="agregar" class="w3-modal">
+    <div id="agregarpath('', views.post_list, name='post_list')" class="w3-modal">
     <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
         <div class="w3-center"><br>
             <span onclick="document.getElementById('agregar').style.display='none'" class="w3-button w3-xlarge w3-transparent w3-display-topright" title="Close Modal">×</span>
@@ -79,4 +79,3 @@ function onClick(element) {
 
 </body>
 </html>
-/html>
