--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,3 +1,18 @@
+
 h1 a {
     color: #FCA205;
 }
+li{
+    cursor:pointer;
+}
+.opcion:hover{
+    opacity:0.5;
+    color: rgb(0, 110, 255);
+}
+.selected{
+    background-color:rgba(10, 202, 10, 0.534);
+}
+body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
+body {font-size:16px;}
+.w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
+.w3-half img:hover{opacity:1}
