--- a/blog/templates/blog/evaluaciones.html
+++ b/blog/templates/blog/evaluaciones.html
@@ -24,7 +24,7 @@
   <button class="w3-button w3-white w3-border w3-border-red w3-round-large">Exportar puntajes</button><br>
 </p>
 
-  <button class="w3-button w3-large w3-red w3-round">Ver</button>
+  <button onclick="window.location = '/evaluacion'" class="w3-button w3-large w3-red w3-round">Ver</button>
   <button class="w3-button w3-large w3-red w3-margin-left w3-round">Modificar</button>
   <button class="w3-button w3-large w3-red w3-right w3-round">Eliminar</button>
 </div>
@@ -39,7 +39,7 @@
     <button class="w3-button w3-white w3-border w3-border-red w3-round-large">Rúbrica asociada</button>
   <button class="w3-button w3-white w3-border w3-border-red w3-round-large">Exportar puntajes</button><br>
 </p>
-   <button class="w3-button w3-large w3-red w3-round">Ver</button>
+   <button onclick="window.location = '/evaluacion'" class="w3-button w3-large w3-red w3-round">Ver</button>
   <button class="w3-button w3-large w3-red w3-margin-left w3-round">Modificar</button>
   <button class="w3-button w3-large w3-red w3-right w3-round">Eliminar</button>
 </div>
