--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -5,16 +5,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="{% static 'css/w3.css' %}">
 <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-<style>
-body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
-body {font-size:16px;}
-.w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
-.w3-half img:hover{opacity:1}
-</style>
+<link rel="stylesheet" href="../../static/fontawesome/css/all.css" >
+
 <body>
 
 <!-- Sidebar/menu -->
@@ -22,7 +17,7 @@ body {font-size:16px;}
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
     <!--Profile image -->
   <div class="w3-container">
-      <p class="w3-center"><img src="https://www.w3schools.com/w3images/avatar3.png" class="w3-circle" style="height:200px;width:200px" alt="Avatar"></p>
+      <p class="w3-center"><img src="{% static 'images/avatar.png'%}" class="w3-circle" style="height:200px;width:200px" alt="Avatar"></p>
     <h3 class="w3-padding-64"><center><b>Usuario</b></center></h3>
   </div>
   <div class="w3-bar-block">
