--- a/blog/templates/blog/evaluadores.html
+++ b/blog/templates/blog/evaluadores.html
@@ -39,15 +39,17 @@
     <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
         <div class="w3-center"><br>
             <span onclick="document.getElementById('agregar').style.display='none'" class="w3-button w3-xlarge w3-transparent w3-display-topright" title="Close Modal">×</span>
-            <form class="w3-container" action="/action_page.php">
+            <form class="w3-container" action="{% url 'add_evaluador' %}" method="post">
+                {% csrf_token %}
+            {{ form.as_p }}
         <div class="w3-section">
           <label><b>Nombre</b></label>
-          <input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Ingrese nombre" name="usrname" required>
+          <input class="w3-input w3-border w3-margin-bottom" value="{{ nombre }}" type="text" placeholder="Ingrese nombre" name="usrname" required>
           <label><b>Apellido</b></label>
-          <input class="w3-input w3-border" type="text" placeholder="Ingrese apellido" name="psw" required>
+          <input class="w3-input w3-border" value="{{ apellido }}" type="text" placeholder="Ingrese apellido" name="psw" required>
             <label><b>Correo</b></label>
-          <input class="w3-input w3-border" type="text" placeholder="Ingrese correo" name="secc" required>
-          <button class="w3-button w3-block w3-red w3-section w3-padding" type="submit">Agregar</button>
+          <input class="w3-input w3-border" value="{{ correo }}" type="text" placeholder="Ingrese correo" name="secc" required>
+          <button class="save btn btn-default" type="submit">Agregar</button>
         </div>
       </form>
       </div>
