--- a/templates/evaluacion/evaluacion_admin.html
+++ b/templates/evaluacion/evaluacion_admin.html
@@ -7,46 +7,30 @@
     <hr style="width:50px;border:5px solid red" class="w3-round">
   </div>
 
-<div class="w3-container">
-  <button class="w3-button w3-large w3-red w3-right w3-round">Agregar nueva evaluación</button><br>
+<div class="w3-margin-top w3-container w3-center">
+    <button onclick="document.getElementById('agregar').style.display='block'" class="w3-col w3-round w3-button w3-red w3-right">
+            <i class="fas fa-plus" style="text-align: center"></i>
+            Agregar evaluacion</button>
 </div>
+    <div id="agregar" class="w3-modal">
+    <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
+        <div class="w3-center"><br>
+            <span onclick="document.getElementById('agregar').style.display='none'" class="w3-button w3-xlarge w3-transparent w3-display-topright" title="Close Modal">×</span>
+            <form class="w3-container" action="{% url 'evaluaciones:add_evaluacion' %}" method="post">
+                {% csrf_token %}
+                <table class="w3-table">
+                    {{ form.as_table }}
+                </table>
+            <button class="w3-button w3-block w3-red w3-section w3-padding" type="submit">Agregar</button>
+      </form>
+      </div>
+    </div>
 <!--Seccion rubricas-->
 
-<button onclick="myFunction('Demo3')" class="w3-btn w3-red w3-block w3-margin" style="width: 75%"><h3>
-    Evaluación 1</h3></button>
 
-<div id="Demo3" class="w3-hide w3-container w3-pale-red  w3-padding-large w3-margin"style="width: 75%">
 
-  <p><li>Curso: -</li>
-    <li>Fecha inicio: -</li>
-    <li>Fecha término: -</li>
-    <button class="w3-button w3-white w3-border w3-border-red w3-round-large">Rúbrica asociada</button>
-  <button class="w3-button w3-white w3-border w3-border-red w3-round-large">Exportar puntajes</button><br>
-</p>
-
-  <button onclick="window.location = '/evaluacion'" class="w3-button w3-large w3-red w3-round">Ver</button>
-  <button class="w3-button w3-large w3-red w3-margin-left w3-round">Modificar</button>
-  <button class="w3-button w3-large w3-red w3-right w3-round">Eliminar</button>
 </div>
-
-<button onclick="myFunction('Demo4')" class="w3-btn w3-red w3-block w3-margin" style="width: 75%"><h3>
-    Evaluación 2</h3></button>
-
-<div id="Demo4" class="w3-hide w3-container w3-pale-red w3-padding-large w3-margin"style="width: 75%">
-  <p><li>Curso: -</li>
-    <li>Fecha inicio: -</li>
-    <li>Fecha término: -</li>
-    <button class="w3-button w3-white w3-border w3-border-red w3-round-large">Rúbrica asociada</button>
-  <button class="w3-button w3-white w3-border w3-border-red w3-round-large">Exportar puntajes</button><br>
-</p>
-   <button onclick="window.location = '/evaluacion'" class="w3-button w3-large w3-red w3-round">Ver</button>
-  <button class="w3-button w3-large w3-red w3-margin-left w3-round">Modificar</button>
-  <button class="w3-button w3-large w3-red w3-right w3-round">Eliminar</button>
-</div>
-
 {% endblock %}
-
-</div>
 
 
 </body>
