--- a/templates/rubrica/rubrica_admin.html
+++ b/templates/rubrica/rubrica_admin.html
@@ -7,9 +7,7 @@
     <hr style="width:50px;border:5px solid red" class="w3-round">
   </div>
 
-<div class="w3-container">
-  <button class="w3-button w3-large w3-red w3-right w3-round">Agregar nueva rúbrica</button><br>
-</div>
+
 <!--Seccion rubricas-->
 
 <button onclick="myFunction('Demo3')" class="w3-btn w3-red w3-block w3-margin" style="width: 75%"><h3>
@@ -40,6 +38,12 @@
 </div>
 </div>
 
+ <!--Agregar rúbricas-->
+<div class="w3-container">
+  <button class="w3-button w3-large w3-red w3-right w3-round">
+      <i class="fas fa-plus"></i>
+      Agregar rúbrica</button><br>
+</div>
  {% endblock %}
 
 
