Pequeño refactoring de css

--- a/templates/cursos/cursos_admin.html
+++ b/templates/cursos/cursos_admin.html
@@ -40,9 +40,9 @@
                 <tr>
                     <th class="w3-red tabla-elemento" > Código </th>
                     
-                    <th class="w3-red tabla-elemento" style="border: 1px solid #ddd; border-collapse: collapse"> Semestre y año </th>
+                    <th class="w3-red tabla-elemento" > Semestre y año </th>
 
-                    <th class="w3-red tabla-elemento" style="border: 1px solid #ddd; border-collapse: collapse"> Nombre </th>
+                    <th class="w3-red tabla-elemento" > Nombre </th>
                 </tr>
             </thead>
             <script>
