--- a/templates/rubrica/rubrica_admin.html
+++ b/templates/rubrica/rubrica_admin.html
@@ -8,42 +8,27 @@
   </div>
 
 
-<!--Seccion rubricas-->
+   <div class="w3-margin-top w3-container w3-center">
+    <button onclick="document.getElementById('agregar').style.display='block'" class="w3-col w3-round w3-button w3-red w3-right">
+            <i class="fas fa-user-plus" style="text-align: center"></i>
+            Agregar rúbrica</button>
+    </div>
 
-<button onclick="myFunction('Demo3')" class="w3-btn w3-red w3-block w3-margin" style="width: 75%"><h3>
-    Rúbrica 1</h3></button>
-
-<div id="Demo3" class="w3-hide w3-container w3-pale-red w3-center w3-padding-large w3-margin"style="width: 75%">
-  <p><li>Aspecto 1</li>
-    <li>Aspecto 2</li>
-</p>
-    <div class="w3-container">
-      <button class="w3-button w3-large w3-margin-right w3-red w3-left w3-round">Ver</button>
-  <button class="w3-button w3-large w3-red w3-left w3-round">Modificar</button>
-  <button class="w3-button w3-large w3-red w3-right w3-round">Eliminar</button>
-</div>
-</div>
-
-<button onclick="myFunction('Demo4')" class="w3-btn w3-red w3-block w3-margin" style="width: 75%"><h3>
-    Rúbrica 2</h3></button>
-
-<div id="Demo4" class="w3-hide w3-container w3-pale-red w3-center w3-padding-large w3-margin"style="width: 75%">
-  <p><li>Aspecto 1</li>
-    <li>Aspecto 2</li>
-</p>
-    <div class="w3-container">
-      <button class="w3-button w3-large w3-margin-right w3-red w3-left w3-round">Ver</button>
-  <button class="w3-button w3-large w3-red w3-left w3-round">Modificar</button>
-  <button class="w3-button w3-large w3-red w3-right w3-round">Eliminar</button>
-</div>
-</div>
-
- <!--Agregar rúbricas-->
-<div class="w3-container">
-  <button class="w3-button w3-large w3-red w3-right w3-round">
-      <i class="fas fa-plus"></i>
-      Agregar rúbrica</button><br>
-</div>
+    <!-- Formulario de agregar -->
+    <div id="agregar" class="w3-modal">
+    <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
+        <div class="w3-center"><br>
+            <span onclick="document.getElementById('agregar').style.display='none'" class="w3-button w3-xlarge w3-transparent w3-display-topright" title="Close Modal">×</span>
+            <form class="w3-container" action="{% url 'rubricas:add_rubrica' %}" method="post">
+                {% csrf_token %}
+                <table class="w3-table">
+                    {{ form.as_table }}
+                </table>
+            <button class="w3-button w3-block w3-red w3-section w3-padding" type="submit">Agregar</button>
+            </form>
+      </div>
+    </div>
+    </div>
  {% endblock %}
 
 
