modificacion en el boton de modificar

--- a/templates/evaluadores/evaluadores_admin.html
+++ b/templates/evaluadores/evaluadores_admin.html
@@ -49,8 +49,7 @@
            
             
             
-            
-            
+
         </table>
     </div>
     
@@ -107,7 +106,7 @@
                     </tr>
                 </table>
 
-            <button class="w3-button w3-block w3-red w3-section w3-padding" type="submit">Agregar</button>
+            <button class="w3-button w3-block w3-red w3-section w3-padding" type="submit">Guardar cambios</button>
             </form>
       </div>
     </div>
