--- a/templates/evaluadores/evaluadores_admin.html
+++ b/templates/evaluadores/evaluadores_admin.html
@@ -98,8 +98,13 @@
     <!-- Cierre de formulario de modificar o eliminar -->
 
 <script>
+
+
+
 function buscarEvaluador(){
-    let busqueda = document.getElementById('buscar').value;
+    let busqueda = document.getElevar elm = document.getElementById(childID);
+    var parent = elm ? elm.parentNode : {};
+    return (parent.id && parent.id === containerID) ? elm : {};mentById('buscar').value;
 
     let filtered = evaluadoresJs.filter((x)=>{
         if(busqueda==""){
@@ -128,15 +133,17 @@ function buscarEvaluador(){
 function showEditar(id){
     console.log(id);
     return ()=>{
-    document.getElementById('id_ID').value=id;
+    let modificar=document.getElementById('modificar')
+    GetElementInsideContainer('modificar','id_ID').value=id;
+    
     let filtered=evaluadoresJs.filter((x)=>{
         return id==x[0];
     });
     let evaluador=filtered[0];
-    document.getElementById('id_nombre').value=evaluador[1];
-    document.getElementById('id_apellido').value=evaluador[2];
-    document.getElementById('id_correo').value=evaluador[3];
-    document.getElementById('modificar').style.display='block';
+    GetElementInsideContainer('modificar','id_nombre').value=evaluador[1];
+    GetElementInsideContainer('modificar','id_apellido').value=evaluador[2];
+    GetElementInsideContainer('modificar','id_correo').value=evaluador[3];
+    modificar.style.display='block';
     };
 }
 
