Arreglos menores, requiere autentificacion

--- a/templates/cursos/curso_detalle.html
+++ b/templates/cursos/curso_detalle.html
@@ -4,7 +4,7 @@
   <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
     <h1 class="w3-xxxlarge w3-text-red"><b>Cursos</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-
+  </div>
   <p><h3>Nombre del curso</h3></p>
    <button onclick="myFunction('Demo1')" class="w3-button w3-half w3-left-align w3-red w3-center">
 Evaluadores</button>
