--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
             {{ user.last_name }}</b>
         </h3>
       {% else %}
-          <h3 class="w3-center"><a href="{% url 'login'%}?next={{request.path}}">Accede</a></h3>
+          <h3 class="w3-center w3-hover-white"><a href="{% url 'login'%}?next={{request.path}}">Accede</a></h3>
       {% endif %}
   </div>
   <div class="w3-bar-block">
@@ -34,6 +34,9 @@
     <a href="/rubricas" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Rúbricas</a>
     <a href="/evaluaciones" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Evaluaciones</a>
     <a href="/#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contacto</a>
+    {% if user.is_authenticated %}
+      <h5 class="w3-small w3-center w3-bar-item w3-hover-white"><a href="{% url 'logout'%}?next={{request.path}}">Salir</a></h5>
+    {% endif %}
   </div>
 </nav>
 
