--- a/templates/evaluadores/evaluadores_admin.html
+++ b/templates/evaluadores/evaluadores_admin.html
@@ -87,6 +87,7 @@
     <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
         <div class="w3-center"><br>
             <span onclick="document.getElementById('modificar').style.display='none'" class="w3-button w3-xlarge w3-transparent w3-display-topright" title="Close Modal">×</span>
+            
             <form class="w3-container" action="{% url 'evaluadores:update_evaluador' %}" method="post">
                 {% csrf_token %}
                 <table class="w3-table">
@@ -94,6 +95,12 @@
                 </table>
 
             <button class="w3-button w3-block w3-red w3-section w3-padding" type="submit">Guardar cambios</button>
+            </form>
+
+            <form class="w3-container" action="{% url 'evaluadores:delete_evaluador' %}" method="post">
+                {% csrf_token %}
+                <input type='text' id='delete_id' name='ID' readonly style="display:none">
+                <button class="w3-button w3-red w3-margin-bottom" type="submit"><i class="fas fa-user-times"></i> Eliminar </button>
             </form>
       </div>
     </div>
@@ -135,7 +142,7 @@ function showEditar(id){
     return ()=>{
     let modificar=document.getElementById('modificar')
     GetElementInsideContainer('modificar','id_ID').value=id;
-    
+    GetElementInsideContainer('modificar','delete_id').value=id;
     let filtered=evaluadoresJs.filter((x)=>{
         return id==x[0];
     });
