--- a/templates/base.html
+++ b/templates/base.html
@@ -25,18 +25,28 @@
             {{ user.last_name }}</b>
         </h3>
       {% else %}
-          <h3 class="w3-center w3-hover-white"><a href="{% url 'login'%}?next={{request.path}}">Accede</a></h3>
+          <h3 class="w3-center w3-hover-white"><a href="{% url 'login'%}?next={{request.path}}">
+              <i class="fas fa-sign-in-alt"></i>
+              Accede</a></h3>
       {% endif %}
   </div>
   <div class="w3-bar-block">
-    <a href="/cursos" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Cursos</a>
-    <a href="/evaluadores" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Evaluadores</a>
-    <a href="/rubricas" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Rúbricas</a>
-    <a href="/evaluaciones" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Evaluaciones</a>
-    <a href="/#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contacto</a>
-    {% if user.is_authenticated %}
-      <h5 class="w3-small w3-center w3-bar-item w3-hover-white"><a href="{% url 'logout'%}?next={{request.path}}">Salir</a></h5>
-    {% endif %}
+      {% if user.is_authenticated %}
+          <a href="/cursos" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Cursos</a>
+          <a href="/evaluadores" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Evaluadores</a>
+          <a href="/rubricas" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Rúbricas</a>
+          <a href="/evaluaciones" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Evaluaciones</a>
+          <a href="/#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contacto</a>
+          <h5 class="w3-small w3-center w3-bar-item w3-hover-white"><a href="{% url 'logout'%}?next={{request.path}}">
+              <i class="fas fa-sign-out-alt"></i>
+              Salir</a></h5>
+      {% else %}
+          <a href="{% url 'login'%}?next={{request.path}}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Cursos</a>
+          <a href="{% url 'login'%}?next={{request.path}}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Evaluadores</a>
+          <a href="{% url 'login'%}?next={{request.path}}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Rúbricas</a>
+          <a href="{% url 'login'%}?next={{request.path}}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Evaluaciones</a>
+          <a href="/#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contacto</a>
+      {% endif %}
   </div>
 </nav>
 
