--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
       {% else %}
           <h3 class="w3-center w3-hover-white"><a href="{% url 'login'%}?next={{request.path}}">
               <i class="fas fa-sign-in-alt"></i>
-              Accede</a></h3>
+              Acceder</a></h3>
       {% endif %}
   </div>
   <div class="w3-bar-block">
@@ -39,7 +39,7 @@
           <a href="/#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contacto</a>
           <h5 class="w3-small w3-center w3-bar-item w3-hover-white"><a href="{% url 'logout'%}?next={{request.path}}">
               <i class="fas fa-sign-out-alt"></i>
-              Salir</a></h5>
+              Cerrar sesión</a></h5>
       {% else %}
           <a href="{% url 'login'%}?next={{request.path}}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Cursos</a>
           <a href="{% url 'login'%}?next={{request.path}}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Evaluadores</a>
